--- a/RegistrationForm.fmx
+++ b/RegistrationForm.fmx
@@ -27,20 +27,23 @@ object MyRegistrationForm: TMyRegistrationForm
     TabOrder = 1
     MaxLength = 2
     Position.X = 96.000000000000000000
-    Position.Y = 64.000000000000000000
+    Position.Y = 74.000000000000000000
     Size.Width = 177.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
+    OnCanFocus = AgeEditCanFocus
+    OnClick = AgeEditClick
   end
   object UsernameEdit: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
     TabOrder = 2
     MaxLength = 30
     Position.X = 96.000000000000000000
-    Position.Y = 112.000000000000000000
+    Position.Y = 130.000000000000000000
     Size.Width = 177.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
+    OnClick = UsernameEditClick
   end
   object PasswordEdit: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
@@ -48,17 +51,18 @@ object MyRegistrationForm: TMyRegistrationForm
     Password = True
     MaxLength = 30
     Position.X = 96.000000000000000000
-    Position.Y = 160.000000000000000000
+    Position.Y = 192.000000000000000000
     Size.Width = 177.000000000000000000
     Size.Height = 28.000000000000000000
     Size.PlatformDefault = False
+    OnClick = PasswordEditClick
   end
   object AgeLabel: TLabel
     StyledSettings = [Family, FontColor]
-    Position.X = 17.000000000000000000
-    Position.Y = 72.000000000000000000
+    Position.X = 18.000000000000000000
+    Position.Y = 74.000000000000000000
     Size.Width = 56.000000000000000000
-    Size.Height = 22.000000000000000000
+    Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
     TextSettings.Font.Size = 13.000000000000000000
     Text = 'Age'
@@ -67,7 +71,7 @@ object MyRegistrationForm: TMyRegistrationForm
   object UsernameLabel: TLabel
     StyledSettings = [Family, FontColor]
     Position.X = 17.000000000000000000
-    Position.Y = 112.000000000000000000
+    Position.Y = 130.000000000000000000
     Size.Width = 71.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
@@ -78,7 +82,7 @@ object MyRegistrationForm: TMyRegistrationForm
   object PasswordLabel: TLabel
     StyledSettings = [Family, FontColor]
     Position.X = 17.000000000000000000
-    Position.Y = 160.000000000000000000
+    Position.Y = 192.000000000000000000
     Size.Width = 57.000000000000000000
     Size.Height = 28.000000000000000000
     Size.PlatformDefault = False
@@ -107,5 +111,6 @@ object MyRegistrationForm: TMyRegistrationForm
     Size.Width = 177.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
+    OnClick = NameEditClick
   end
 end
