add duplicate username registration check

--- a/RegistrationForm.fmx
+++ b/RegistrationForm.fmx
@@ -10,6 +10,7 @@ object MyRegistrationForm: TMyRegistrationForm
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnClose = FormClose
   DesignerMasterStyle = 0
   object NameLabel: TLabel
     StyledSettings = [Family, FontColor]
