--- a/LoginForm.fmx
+++ b/LoginForm.fmx
@@ -10,6 +10,7 @@ object MyLoginForm: TMyLoginForm
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnClose = FormClose
   DesignerMasterStyle = 0
   object UsernameEdit: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
